# musicdb

./: .gitignore  README.md  examples.sh  musicdb.cabal
src/: Main.hs  MusicBrainz.hs  MusicDB.hs
src/MusicBrainz/: Analysis.hs  Database.hs  Errors.hs  Parser.hs  Types.hs  URI.hs
