-- musicdb.cabal
--  by alemedeiros <alexandre.n.medeiros _at_ gmail.com>
--
-- Cabal file for musicdb project -- A Musicbrainz based artist information
-- database program

name:                musicdb
version:             0.1.0.0

synopsis:            A MusicBrainz based artist information database program
description:         A small project for artist/music information database using MusicBrainz as a source of information (Individual Project for QMUL's ECS713 - Functional Programming Module).

license:             BSD3
license-file:        LICENSE

author:              Alexandre Medeiros
maintainer:          alexandre.n.medeiros@gmail.com

build-type:          Simple
extra-source-files:  README.md

cabal-version:       >=1.10

executable musicdb
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       MusicBrainz
  build-depends:       base >=4.7 && <4.8, HDBC-Sqlite3 >=2.3, HTTP >=4000.2
  default-language:    Haskell2010
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
